--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.3",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
