--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 
-# VUE_APP_API_URL=http://localhost:3000
-VUE_APP_API_URL=https://energy-watch-backend.vercel.app
+VUE_APP_API_URL=http://localhost:3000
+# VUE_APP_API_URL=https://energy-watch-backend.vercel.app
